--- a/.github/workflows/updatedComparejson.yml
+++ b/.github/workflows/updatedComparejson.yml
@@ -85,6 +85,9 @@ jobs:
             const newEnvironment = process.env.NEW_ENVIRONMENT;
             const newLob = process.env.NEW_LOB;
 
+            const OLD_JSON = oldLob;
+            const NEW_JSON = newLob;
+
             async function loadJsonFromUrlOrFile(url, filePath) {
               if (url) {
                 const response = await axios.get(url);
@@ -95,10 +98,11 @@ jobs:
             }
 
             async function compareJson() {
-              const oldData = await loadJsonFromUrlOrFile(process.env.OLD_URL, 'old_data.json');
-              const newData = await loadJsonFromUrlOrFile(process.env.NEW_URL, 'new_data.json');
+              const oldData = await loadJsonFromUrlOrFile('', 'old_data.json');
+              const newData = await loadJsonFromUrlOrFile('', 'new_data.json');
 
               const workbook = new ExcelJS.Workbook();
+              const sheet = workbook.addWorksheet('Comparison Results');
 
               function removeExcludedKeys(obj) {
                 const cleanedObj = {};
@@ -110,55 +114,56 @@ jobs:
                 return cleanedObj;
               }
 
-              function createSheet(sheetName, rows) {
-                const sheet = workbook.addWorksheet(sheetName.slice(0, 31));
-                if (rows.length > 0) {
-                  const headers = Object.keys(rows[0]);
-                  sheet.addRow(headers).font = { bold: true };
-                  rows.forEach(row => sheet.addRow(Object.values(row)));
-                } else {
-                  sheet.addRow(['No Data']).font = { bold: true };
-                }
-              }
-
               const newEntries = [];
               const notFoundEntries = [];
               const differentEntries = [];
               const similarEntries = [];
 
-              Object.keys(oldData).forEach((parentKey) => {
-                const oldParent = oldData[parentKey];
-                const newParent = newData[parentKey] || {};
-                Object.keys(oldParent).forEach(key => {
-                  const oldEntry = removeExcludedKeys(oldParent[key]);
-                  const newEntry = removeExcludedKeys(newParent[key] || {});
-                  if (!newParent[key]) {
-                    notFoundEntries.push({ source: 'Old JSON', key, ...oldEntry });
-                  } else if (JSON.stringify(oldEntry) !== JSON.stringify(newEntry)) {
-                    differentEntries.push({ source: 'Old JSON', key, ...oldEntry });
-                    differentEntries.push({ source: 'New JSON', key, ...newEntry });
-                  } else {
-                    similarEntries.push({ source: 'Old JSON and New JSON', key, ...oldEntry });
-                  }
-                });
+              Object.keys(oldData).forEach((key) => {
+                const oldEntry = removeExcludedKeys(oldData[key]);
+                const newEntry = removeExcludedKeys(newData[key] || {});
 
-                Object.keys(newParent).forEach(key => {
-                  if (!oldParent[key]) {
-                    newEntries.push({ source: 'New JSON', key, ...removeExcludedKeys(newParent[key]) });
-                  }
-                });
+                if (!newData[key]) {
+                  notFoundEntries.push({ source: 'Old JSON', key, ...oldEntry });
+                } else if (JSON.stringify(oldEntry) !== JSON.stringify(newEntry)) {
+                  differentEntries.push(
+                    { source: 'Old JSON', key, ...oldEntry },
+                    { source: 'New JSON', key, ...newEntry }
+                  );
+                } else {
+                  similarEntries.push({ source: 'Old JSON and New JSON', key, ...oldEntry });
+                }
               });
 
-              createSheet('New Entries', newEntries);
-              createSheet('Not Found Entries', notFoundEntries);
-              createSheet('Different Entries', differentEntries);
-              createSheet('Similar Entries', similarEntries);
+              Object.keys(newData).forEach((key) => {
+                if (!oldData[key]) {
+                  const newEntry = removeExcludedKeys(newData[key]);
+                  newEntries.push({ source: 'New JSON', key, ...newEntry });
+                }
+              });
+
+              function addSection(title, entries) {
+                if (entries.length > 0) {
+                  sheet.addRow([title]).font = { bold: true };
+                  const headers = Object.keys(entries[0]);
+                  sheet.addRow(headers).font = { bold: true };
+                  entries.forEach((entry) => {
+                    sheet.addRow(headers.map((header) => entry[header] || ''));
+                  });
+                  sheet.addRow([]);
+                }
+              }
+
+              addSection('New Entries', newEntries);
+              addSection('Not Found Entries', notFoundEntries);
+              addSection('Different Entries', differentEntries);
+              addSection('Similar Entries', similarEntries);
 
               await workbook.xlsx.writeFile('json_differences.xlsx');
               console.log('Excel file generated successfully.');
             }
 
-            compareJson().catch(error => {
+            compareJson().catch((error) => {
               console.error('Error:', error);
               process.exit(1);
             });
