--- a/.github/workflows/process-json-generate-excel.yml
+++ b/.github/workflows/process-json-generate-excel.yml
@@ -1,37 +1,49 @@
-name: Generate Excel Report from JSON Files
+name: Generate Excel Report
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
+    inputs:
+      lob_new:
+        description: "LOB for New JSON"
+        required: true
+        default: "ifa"
+      lob_old:
+        description: "LOB for Old JSON"
+        required: true
+        default: "cns"
+      env_new:
+        description: "Environment for New JSON"
+        required: true
+        default: "default-new-env"
+      env_old:
+        description: "Environment for Old JSON"
+        required: true
+        default: "default-old-env"
 
 jobs:
   process-json:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout the repository
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # Step 2: Set up Node.js environment
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
         node-version: 16
 
-    # Step 3: Install dependencies
     - name: Install dependencies
-      run: |
-        npm install xlsx
+      run: npm install xlsx
 
-    # Step 4: Process JSON and generate Excel
-    - name: Generate Excel Report
-      run: |
-        node process_json_to_excel.js
+    - name: Process JSON files and generate Excel
+      env:
+        LOB_NEW: ${{ inputs.lob_new }}
+        LOB_OLD: ${{ inputs.lob_old }}
+        ENV_NEW: ${{ inputs.env_new }}
+        ENV_OLD: ${{ inputs.env_old }}
+      run: node process_json_to_excel.js
 
-    # Step 5: Upload the Excel file as an artifact
     - name: Upload Excel Report
       uses: actions/upload-artifact@v4
       with:
